fix padding issue and rm border-right on mobile

--- a/explorer/client/src/pages/transaction-result/TxModuleView.module.css
+++ b/explorer/client/src/pages/transaction-result/TxModuleView.module.css
@@ -12,7 +12,7 @@ section .codeview {
 }
 
 .moduletitle {
-    @apply text-sm font-semibold;
+    @apply text-sm font-semibold pt-2 pb-2;
 }
 
 .txmodule {
@@ -66,14 +66,15 @@ section .codeview pre {
 .modulewrapper {
     @apply p-0 pb-2;
 }
+@media (min-width: 40em) {
+    section .modulewrapper {
+        border-right: 1px solid #f0f1f2;
+    }
 
-section .modulewrapper {
-    border-right: 1px solid #f0f1f2;
-}
-
-section .modulewrapper:last-child,
-section .modulewrapper:nth-child(3n) {
-    border-right: none;
+    section .modulewrapper:last-child,
+    section .modulewrapper:nth-child(3n) {
+        border-right: none;
+    }
 }
 
 .codeline {
